# computer-graphics-ex

./: CMakeLists.txt
Learn_OpenGL/0_nothing/: zeroKara.cpp
Learn_OpenGL/1_hi_triangle/: hiTriangle.cpp  multiTriangle.cpp
Learn_OpenGL/2_shader/: myShader.h  shader.cpp
Learn_OpenGL/3_texture/: myShader.h  texture.cpp
Learn_OpenGL/res/shader/: 2_fragmentShader.fs  2_vertexShader.vs  3_fragmentShader.fs  3_vertexShader.vs
School_Homeworks/1/: dda.cpp
